Closed Bug 1365227 Opened 8 years ago Closed 8 years ago

AVCC NAL converter should generate extradata.

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox54 --- fixed
firefox55 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

Attachments

(2 files)

The AVCC converter converts the NAL from AnnexB to AVCC. However, it doesn't generate the related extradata. Making further use of the converted data difficult.
Comment on attachment 8868117 [details] Bug 1365227: P1. Create AVCC header for converted annexB. https://reviewboard.mozilla.org/r/139726/#review143320 Awesome.
Attachment #8868117 - Flags: review?(jacheng) → review+
Comment on attachment 8868118 [details] Bug 1365227: P2. Enforce that ExtractExtra data works on AVCC only. https://reviewboard.mozilla.org/r/139728/#review143322 lgtm.
Attachment #8868118 - Flags: review?(jacheng) → review+
Thank you for solving this problem with such a simple logic. I've also tested it with our HLS scenario. It also works. Thank you again for helping me.
awesome.. glad that worked. My apologies for giving you the wrong pointers earlier on...
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/02ce5318570c P1. Create AVCC header for converted annexB. r=JamesCheng https://hg.mozilla.org/integration/autoland/rev/26cf15cc5389 P2. Enforce that ExtractExtra data works on AVCC only. r=JamesCheng
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment on attachment 8868118 [details] Bug 1365227: P2. Enforce that ExtractExtra data works on AVCC only. Only this patch should be uplifted Approval Request Comment [Feature/Bug causing the regression]: unknown. Was discovered at random while working on something else. [User impact if declined]: some stream (likely BBC one) won't start. [Is this code covered by automated tests?]: in theory yes. But obviously we missed that bit. [Has the fix been verified in Nightly?]: NA [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: no [Is the change risky?]: no [Why is the change risky/not risky?]: we incorrectly assumed that a given byte signature was indicating a type of content that can't happen yet. BBC had reported that some streams didn't start sometime this could be the reason. [String changes made/needed]: none
Attachment #8868118 - Flags: approval-mozilla-beta?
Comment on attachment 8868118 [details] Bug 1365227: P2. Enforce that ExtractExtra data works on AVCC only. Fix an intermittent stream error for BBC which is important for users. Beta54+. Should be in 54 beta 10.
Attachment #8868118 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
(In reply to Jean-Yves Avenard [:jya] from comment #9) > [Is this code covered by automated tests?]: in theory yes. But obviously we > missed that bit. > [Has the fix been verified in Nightly?]: NA > [Needs manual test from QE? If yes, steps to reproduce]: no Setting qe-verify- based on jya's assessment on manual testing needs.
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: