Bug 1365227: P1. Create AVCC header for converted annexB. r=JamesCheng

Otherwise AnnexB::IsAVCC will return false on those converted samples.

MozReview-Commit-ID: 6OBV6L49InL